blog page complete

--- a/blog.html
+++ b/blog.html
@@ -424,6 +424,112 @@
                             </li>
                         </ul>
                     </div>
+                    <div class="blog__side_add">
+                        <a href="#">
+                            <img src="images/banner-simple.jpg" alt="img" class="img-fluid">
+                        </a>
+                    </div>
+                    <div class="blog__side_post">
+                        <h2 class="common__heading">Recent Posts</h2>
+                        <ul>
+                            <li>
+                                <div class="row">
+                                    <div class="col-lg-5 post__img">
+                                        <a href="#">
+                                            <img src="images/post-1.jpg" class="img-fluid" alt="img">
+                                        </a>
+                                    </div>
+                                    <div class="col-lg-7 post__detail">
+                                        <a href="#">Coffee Time in Office </a>
+                                        <p>July 12 2014</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="row">
+                                    <div class="col-lg-5 post__img">
+                                        <a href="#">
+                                            <img src="images/post-1.jpg" class="img-fluid" alt="img">
+                                        </a>
+                                    </div>
+                                    <div class="col-lg-7 post__detail">
+                                        <a href="#">Coffee Time in Office </a>
+                                        <p>July 12 2014</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="row">
+                                    <div class="col-lg-5 post__img">
+                                        <a href="#">
+                                            <img src="images/post-1.jpg" class="img-fluid" alt="img">
+                                        </a>
+                                    </div>
+                                    <div class="col-lg-7 post__detail">
+                                        <a href="#">Coffee Time in Office </a>
+                                        <p>July 12 2014</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="row">
+                                    <div class="col-lg-5 post__img">
+                                        <a href="#">
+                                            <img src="images/post-1.jpg" class="img-fluid" alt="img">
+                                        </a>
+                                    </div>
+                                    <div class="col-lg-7 post__detail">
+                                        <a href="#">Coffee Time in Office </a>
+                                        <p>July 12 2014</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="row">
+                                    <div class="col-lg-5 post__img">
+                                        <a href="#">
+                                            <img src="images/post-1.jpg" class="img-fluid" alt="img">
+                                        </a>
+                                    </div>
+                                    <div class="col-lg-7 post__detail">
+                                        <a href="#">Coffee Time in Office </a>
+                                        <p>July 12 2014</p>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="blog__side_tag">
+                        <h2 class="common__heading">Popular Tags</h2>
+                        <div class="tagcloud">
+                            <a href="#" style="font-size: 12pt;">beautiful</a>
+                            <a href="#" style="font-size: 20pt;">media center</a>
+                            <a href="#" style="font-size: 10pt;">quality</a>
+                            <a href="#" style="font-size: 14pt;">website </a>
+                            <a href="#" style="font-size: 16pt;">templete  </a>
+                            <a href="#" style="font-size: 12pt;">professional </a>
+                            <a href="#" style="font-size: 20pt;">design</a>
+                            <a href="#" style="font-size: 10pt;">multipurpose</a>
+                            <a href="#" style="font-size: 16pt;">portfolio</a>
+                            <a href="#" style="font-size: 10pt;">customization</a>
+                            <a href="#" style="font-size: 19pt;">bootstrap</a>
+                            <a href="#" style="font-size: 9pt;">mobile</a>
+                            <a href="#" style="font-size: 14pt;">features</a>
+                            <a href="#" style="font-size: 9pt;">styles</a>
+                            <a href="#" style="font-size: 13pt;">responsive</a>
+                            <a href="#" style="font-size: 22pt;">font</a>
+                            <a href="#" style="font-size: 10pt;">icons</a>
+                            <a href="#" style="font-size: 18pt;">love</a>
+                            <a href="#" style="font-size: 12pt;">digital</a>
+                            <a href="#" style="font-size: 23pt;">awesome</a>
+                            <a href="#" style="font-size: 13pt;">passion</a>
+                            <a href="#" style="font-size: 19pt;">typography</a>
+                            <a href="#" style="font-size: 20pt;">clean</a>
+                            <a href="#" style="font-size: 12pt;">easy to use</a>
+                            <a href="#" style="font-size: 22pt;">buy it</a>
+                            <a href="#" style="font-size: 14pt;">success</a>
+                        </div>
+                    </div>
                 </div>
                 <!-- ------------blog small content-------- -->
             </div>
