--- a/index - 2.html
+++ b/index - 2.html
@@ -28,16 +28,22 @@
                 <div class="nav__wrapper_content_1">
                     <ul>
                         <li>
-                            <a href="./index - 2.html">home</a>
+                            <a href="./index.html">home</a>
                         </li>
-                        <li>
+                        <li class="dropdown_main" >
                             <a href="#">color change <span><i class="fa-solid fa-chevron-down"></i></span> </a>
+                            <ul class="dropdown">
+                                <li id="green">green</li>
+                                <li id="blue">blue</li>
+                                <li id="red">red</li>
+                                <li id="navy">navy</li>
+                            </ul>
                         </li>
                         <li>
                             <a href="#">blog</a>
                         </li>
                         <li>
-                            <a href="#">FAQ</a>
+                            <a href="./pages/faq.html">FAQ</a>
                         </li>
                         <li> 
                             <a href="#">contact</a>
@@ -47,16 +53,19 @@
                             <ul class="dropdown">
                                 <li><a href="./index.html">home</a></li>
                                 <li><a href="./index - 2.html">home alt</a></li>
-                                <li><a href="#">blog</a></li>
-                                <li><a href="#">blog</a></li>
-                                <li><a href="#">blog</a></li>
-                                <li><a href="#">blog</a></li>
-                                <li><a href="#">multi product</a></li>
-                                <li><a href="./about.html">about us</a></li>
-                                <li><a href="#">blog</a></li>
+                                <li><a href="./pages/single-product.html">single product</a></li>
+                                <li><a href="./pages/cart.html">shoping cart</a></li>
+                                <li><a href="./pages/track.html">track</a></li>
+                                <li><a href="./pages/register.html">register</a></li>
+                                <li><a href="./pages/contact.html">contact</a></li>
+                                <li><a href="./pages/terms.html">terms & conditions</a></li>
+                                <li><a href="./pages/about.html">about us</a></li>
+                                <li><a href="./pages/checkout.html">checkout</a></li>
+                                <li><a href="./pages/blog.html">blog</a></li>
+                                <li><a href="./pages/wishlist.html">wishlist</a></li>
                                 <li><a href="#">single_product_with_sidebar</a></li>
-                                <li><a href="#">blog</a></li>
-                                <li><a href="#">blog</a></li>
+                                <li><a href="./pages/faq.html">FAQ</a></li>
+                                <li><a href="./pages/404.html">404</a></li>
                                 <li><a href="#">blog</a></li>
                             </ul>
                         </li>
@@ -67,19 +76,20 @@
                         <li class="dropdown_main">
                             <a href="#">english <span><i class="fa-solid fa-chevron-down"></i></span></a>
                             <ul class="dropdown">
-                                <li><a href="#">fgfdgb</a></li>
-                                <li><a href="#">fgfdgb</a></li>
-                                <li><a href="#">fgfdgb</a></li>
-                                <li><a href="#">fgfdgb</a></li>
+                                <li><a href="#">bangla</a></li>
+                                <li><a href="#">arabic</a></li>
+                                <li><a href="#">hindi</a></li>
+                                <li><a href="#">germen</a></li>
+                                <li><a href="#">french</a></li>
                             </ul>
                         </li>
                         <li class="dropdown_main">
                             <a href="#">dollar (US) <span><i class="fa-solid fa-chevron-down"></i></span></a>
                             <ul class="dropdown">
-                                <li><a href="#">fgfdgb</a></li>
-                                <li><a href="#">fgfdgb</a></li>
-                                <li><a href="#">fgfdgb</a></li>
-                                <li><a href="#">fgfdgb</a></li>
+                                <li><a href="#">bangladeshi (TAKA)</a></li>
+                                <li><a href="#">euro (eu)</a></li>
+                                <li><a href="#">indian rupee (INR)</a></li>
+                                <li><a href="#">dollar (US)</a></li>
                             </ul>
                         </li>
                         <li>
@@ -104,7 +114,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-2  logo">
-                    <img class="img-fluid" src="images/logo.png" alt="img">
+                    <img class="img-fluid logo__img" src="images/logo1.png" alt="img">
                 </div>
                 <div class="col-lg-7 search">
                     <div class="header__search_wrapper">
@@ -154,6 +164,9 @@
     </header>
 
     <!-- --------------------header end here----------------- -->
+
+
+
 
     <!-- ------------------------banner start here------------ -->
 
@@ -1544,6 +1557,8 @@
 
     <!-- ---------juery js--------------- -->
     <script src="js/jquery-2.2.4.min.js"></script>
+    <!-- ---------juery js--------------- -->
+    <script src="js/jquery-3.4.1.min.js"></script>
     <!-- ----------fontawesome--------------- -->
     <script src="https://kit.fontawesome.com/eccb807151.js" crossorigin="anonymous"></script>
     <!-- --------------slick slider js---------------- -->
@@ -1557,5 +1572,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- ----------main js--------------- -->
     <script src="js/script.js"></script>
+    <!-- ---------color------------- -->
+    <script src="js/color.js"></script>
 </body>
 </html>
