--- a/404.html
+++ b/404.html
@@ -28,16 +28,22 @@
                 <div class="nav__wrapper_content_1">
                     <ul>
                         <li>
-                            <a href="#">home</a>
+                            <a href="./index.html">home</a>
                         </li>
-                        <li>
+                        <li class="dropdown_main" >
                             <a href="#">color change <span><i class="fa-solid fa-chevron-down"></i></span> </a>
+                            <ul class="dropdown">
+                                <li id="green1">green</li>
+                                <li id="blue1">blue</li>
+                                <li id="red1">red</li>
+                                <li id="navy1">navy</li>
+                            </ul>
                         </li>
                         <li>
                             <a href="#">blog</a>
                         </li>
                         <li>
-                            <a href="#">FAQ</a>
+                            <a href="./pages/faq.html">FAQ</a>
                         </li>
                         <li> 
                             <a href="#">contact</a>
@@ -47,16 +53,19 @@
                             <ul class="dropdown">
                                 <li><a href="./index.html">home</a></li>
                                 <li><a href="./index - 2.html">home alt</a></li>
-                                <li><a href="#">blog</a></li>
-                                <li><a href="#">blog</a></li>
-                                <li><a href="#">blog</a></li>
-                                <li><a href="#">blog</a></li>
-                                <li><a href="#">multi product</a></li>
+                                <li><a href="./single-product.html">single product</a></li>
+                                <li><a href="./cart.html">shoping cart</a></li>
+                                <li><a href="./track.html">track</a></li>
+                                <li><a href="./register.html">register</a></li>
+                                <li><a href="./contact.html">contact</a></li>
+                                <li><a href="./terms.html">terms & conditions</a></li>
                                 <li><a href="./about.html">about us</a></li>
-                                <li><a href="#">blog</a></li>
+                                <li><a href="./checkout.html">checkout</a></li>
+                                <li><a href="./blog.html">blog</a></li>
+                                <li><a href="./wishlist.html">wishlist</a></li>
                                 <li><a href="#">single_product_with_sidebar</a></li>
-                                <li><a href="#">blog</a></li>
-                                <li><a href="#">blog</a></li>
+                                <li><a href="./faq.html">FAQ</a></li>
+                                <li><a href="./404.html">404</a></li>
                                 <li><a href="#">blog</a></li>
                             </ul>
                         </li>
@@ -67,19 +76,20 @@
                         <li class="dropdown_main">
                             <a href="#">english <span><i class="fa-solid fa-chevron-down"></i></span></a>
                             <ul class="dropdown">
-                                <li><a href="#">fgfdgb</a></li>
-                                <li><a href="#">fgfdgb</a></li>
-                                <li><a href="#">fgfdgb</a></li>
-                                <li><a href="#">fgfdgb</a></li>
+                                <li><a href="#">bangla</a></li>
+                                <li><a href="#">arabic</a></li>
+                                <li><a href="#">hindi</a></li>
+                                <li><a href="#">germen</a></li>
+                                <li><a href="#">french</a></li>
                             </ul>
                         </li>
                         <li class="dropdown_main">
                             <a href="#">dollar (US) <span><i class="fa-solid fa-chevron-down"></i></span></a>
                             <ul class="dropdown">
-                                <li><a href="#">fgfdgb</a></li>
-                                <li><a href="#">fgfdgb</a></li>
-                                <li><a href="#">fgfdgb</a></li>
-                                <li><a href="#">fgfdgb</a></li>
+                                <li><a href="#">bangladeshi (TAKA)</a></li>
+                                <li><a href="#">euro (eu)</a></li>
+                                <li><a href="#">indian rupee (INR)</a></li>
+                                <li><a href="#">dollar (US)</a></li>
                             </ul>
                         </li>
                         <li>
@@ -104,7 +114,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-2  logo">
-                    <img class="img-fluid" src="images/logo.png" alt="img">
+                    <img class="img-fluid logo__img" src="images/logo1.png" alt="img">
                 </div>
                 <div class="col-lg-7 search">
                     <div class="header__search_wrapper">
@@ -186,8 +196,6 @@
 
 
     <!-- ----------------------404 end here------------------ -->
-
-
 
 
 
@@ -362,7 +370,7 @@
             <div class="row footer__wrapper">
                 <div class="col-lg-5 footer__logo_main">
                     <div class="footer__logo">
-                        <img src="images/logo.png" alt="img" class="img-fluid">
+                        <img src="images/logo1.png" alt="img" class="img-fluid logo__img">
                     </div>
                     <h2>Feel free to contact us via phone,email or just send us mail.</h2>
                     <h3>17 Princess Road, London, Greater London NW1 8JR, UK 1-888-8MEDIA (1-888-892-9953) </h3>
@@ -447,7 +455,48 @@
     </section>
 
 
+
+
+
     <!-- ------------------------coppy start here----------------- -->
+
+
+    <!-- ----------------------color switcher-------------------- -->
+
+    <div class="color__main group">                
+        <div class="color activate">
+            <div class="color_inside">
+                <h4>header style</h4>
+            <ul >
+                <li ><a href="./index.html">home</a></li>
+                <li ><a href="./index - 2.html">home alt</a></li>
+            </ul>
+            </div>
+            <div class="color_inside">
+                <h4>colors</h4>
+            <ul >
+                <li id="green">green</li>
+                <li id="blue">blue</li>                        
+                <li id="red">red</li>
+                <li id="navy">fffff</li>
+            </ul>
+            </div>
+        </div>
+        <div class="setting activation">
+            <i class="fa fa-cog fa-lg fa-spin"></i>
+        </div>
+    </div>
+    
+
+    <!-- ----------------------color switcher-------------------- -->
+
+
+
+
+
+
+
+
 
 
 
@@ -471,6 +520,8 @@
 
     <!-- ---------juery js--------------- -->
     <script src="js/jquery-2.2.4.min.js"></script>
+    <!-- ---------juery js--------------- -->
+    <script src="js/jquery-3.4.1.min.js"></script>
     <!-- ----------fontawesome--------------- -->
     <script src="https://kit.fontawesome.com/eccb807151.js" crossorigin="anonymous"></script>
     <!-- --------------slick slider js---------------- -->
@@ -484,5 +535,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- ----------main js--------------- -->
     <script src="js/script.js"></script>
+    <!-- ---------color------------- -->
+    <script src="js/color.js"></script>
+
+
+
+
 </body>
 </html>
