--- a/pages/terms.html
+++ b/pages/terms.html
@@ -575,12 +575,12 @@
                 <li id="green">green</li>
                 <li id="blue">blue</li>                        
                 <li id="red">red</li>
-                <li id="navy">fffff</li>
+                <li id="navy">navy</li>
             </ul>
             </div>
         </div>
         <div class="setting activation">
-            <i class="fa fa-cog fa-lg fa-spin"></i>
+            <i class="fa-solid fa-wrench"></i>
         </div>
     </div>
     
