--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- --------slick slider css---------- -->
-    <link rel="stylesheet" href="../css/slick.css">
+    <link rel="stylesheet" href="./css/slick.css">
     <!-- ------------fade up css----------------- -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- --------------------font aewsome---------------- -->
@@ -17,7 +17,7 @@
     <!-- -------------bootstrap css---------->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- --------main css---------------- -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     
@@ -28,7 +28,7 @@
                 <div class="nav__wrapper_content_1">
                     <ul>
                         <li>
-                            <a href="./index.html">home</a>
+                            <a href="./pages/index.html">home</a>
                         </li>
                         <li class="dropdown_main" >
                             <a href="#">color change <span><i class="fa-solid fa-chevron-down"></i></span> </a>
@@ -40,32 +40,32 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="./blog.html">blog</a>
+                            <a href="./pages/blog.html">blog</a>
                         </li>
                         <li>
                             <a href="./pages/faq.html">FAQ</a>
                         </li>
                         <li> 
-                            <a href="./contact.html">contact</a>
+                            <a href="./pages/contact.html">contact</a>
                         </li>
                         <li class="dropdown_main">
                             <a href="#">pages <span><i class="fa-solid fa-chevron-down"></i></span> </a>
                             <ul class="dropdown">
-                                <li><a href="./index.html">home</a></li>
-                                <li><a href="./index - 2.html">home alt</a></li>
-                                <li><a href="./single-product.html">single product</a></li>
-                                <li><a href="./cart.html">shoping cart</a></li>
-                                <li><a href="./track.html">track</a></li>
-                                <li><a href="./register.html">register</a></li>
-                                <li><a href="./contact.html">contact</a></li>
-                                <li><a href="./terms.html">terms & conditions</a></li>
-                                <li><a href="./about.html">about us</a></li>
-                                <li><a href="./checkout.html">checkout</a></li>
-                                <li><a href="./blog.html">blog</a></li>
-                                <li><a href="./wishlist.html">wishlist</a></li>
+                                <li><a href="./pages/index.html">home</a></li>
+                                <li><a href="./pages/index - 2.html">home alt</a></li>
+                                <li><a href="./pages/single-product.html">single product</a></li>
+                                <li><a href="./pages/cart.html">shoping cart</a></li>
+                                <li><a href="./pages/track.html">track</a></li>
+                                <li><a href="./pages/register.html">register</a></li>
+                                <li><a href="./pages/contact.html">contact</a></li>
+                                <li><a href="./pages/terms.html">terms & conditions</a></li>
+                                <li><a href="./pages/about.html">about us</a></li>
+                                <li><a href="./pages/checkout.html">checkout</a></li>
+                                <li><a href="./pages/blog.html">blog</a></li>
+                                <li><a href="./pages/wishlist.html">wishlist</a></li>
                                 <li><a href="#">single_product_with_sidebar</a></li>
-                                <li><a href="./faq.html">FAQ</a></li>
-                                <li><a href="./404.html">404</a></li>
+                                <li><a href="./pages/faq.html">FAQ</a></li>
+                                <li><a href="./pages/404.html">404</a></li>
                                 <li><a href="#">blog</a></li>
                             </ul>
                         </li>
@@ -1312,13 +1312,13 @@
 
 
     <!-- ---------juery js--------------- -->
-    <script src="../js/jquery-2.2.4.min.js"></script>
+    <script src="./js/jquery-2.2.4.min.js"></script>
     <!-- ---------juery js--------------- -->
-    <script src="../js/jquery-3.4.1.min.js"></script>
+    <script src="./js/jquery-3.4.1.min.js"></script>
     <!-- ----------fontawesome--------------- -->
     <script src="https://kit.fontawesome.com/eccb807151.js" crossorigin="anonymous"></script>
     <!-- --------------slick slider js---------------- -->
-    <script src="../js/slick.min.js"></script>
+    <script src="./js/slick.min.js"></script>
     <!-- ----------fadeup js----------- -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
@@ -1327,9 +1327,9 @@
     <!-- -------------bootstrap js---------- -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- ----------main js--------------- -->
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
     <!-- ---------color------------- -->
-    <script src="../js/color.js"></script>
+    <script src="./js/color.js"></script>
 
     
 </body>
