small & medium responsive

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <div class="container">
             <!-- --------banner menu & slider---------- -->
             <div class="row">
-                <div class="col-12  col-lg-2 banner__menu">
+                <div class="col-12 col-md-3 col-lg-2 banner__menu">
                     <div class="banner__menu_head">
                         <i class="fa-solid fa-bars-staggered"></i>
                         all departments
@@ -214,7 +214,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-12 col-lg-10 banner__content">
+                <div class="col-12 col-md-9 col-lg-10 banner__content">
                     <div class="slick__slider">
                         <div class="slider__content_1">
                             <div class="content__detail">
@@ -241,14 +241,14 @@
             <!-- --------banner menu & slider---------- -->
             <!-- ----------banner mobile & watch------------ -->
             <div class="row">
-                <div class="col-12 col-lg-6 mobile">
+                <div class="col-12 col-md-6 col-lg-6 mobile">
                     <a href="#" class="banner__mobile">
                         <h2>new life</h2>
                         <h4>introducing new category</h4>
                         <img src="images/banner-narrow-01.jpg" alt="img">
                     </a>
                 </div>
-                <div class="col-12 col-lg-6 mobile">
+                <div class="col-12 col-md-6 col-lg-6 mobile">
                     <a href="#" class="banner__watch">
                         <h2>time & style</h2>
                         <h4>checkout new arrivels</h4>
@@ -278,7 +278,7 @@
                 <!-- ---------1st content-------------- -->
                 <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                     <div class="row">
-                        <div class="col-6  col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-01.jpg" alt="img">
                                 <div class="sale__detail">
@@ -304,7 +304,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6  col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-02.jpg" alt="img">
                                 <div class="sale__detail">
@@ -330,7 +330,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6  col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-03.jpg" alt="img">
                                 <div class="sale__detail">
@@ -353,7 +353,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6  col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-04.jpg" alt="img">
                                 <div class="sale__detail">
@@ -388,7 +388,7 @@
                 <!-- ---------2nd content-------------- -->
                 <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
                     <div class="row">
-                        <div class="col-6  col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-02.jpg" alt="img">
                                 <div class="sale__detail">
@@ -414,7 +414,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6  col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-01.jpg" alt="img">
                                 <div class="sale__detail">
@@ -440,7 +440,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6  col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-04.jpg" alt="img">
                                 <div class="sale__detail">
@@ -469,7 +469,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6  col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-03.jpg" alt="img">
                                 <div class="sale__detail">
@@ -498,7 +498,7 @@
                 <!-- ---------3rd content-------------- -->
                 <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
                     <div class="row">
-                        <div class="col-6  col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-03.jpg" alt="img">
                                 <div class="sale__detail">
@@ -521,7 +521,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6  col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-04.jpg" alt="img">
                                 <div class="sale__detail">
@@ -550,7 +550,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6  col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-01.jpg" alt="img">
                                 <div class="sale__detail">
@@ -576,7 +576,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6  col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-02.jpg" alt="img">
                                 <div class="sale__detail">
@@ -1004,54 +1004,54 @@
     <section id="featured">
         <div class="container">
             <div class="row">
-                <div class="col-12  col-lg-4 featured__product">
+                <div class="col-12 col-md-6 col-lg-4 featured__product">
                     <div class=" featured__product_heading">
                         <h2>Featured products</h2>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-8 col-lg-9 product__main_detail">
+                        <div class="col-8  col-lg-9 product__main_detail">
                             <a href="#">Netbook Acer Travel B113-E-10072. </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>
                         </div>
-                        <div class="col-4 col-lg-3 product__main_img">
+                        <div class="col-4  col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-01.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-8 col-lg-9 product__main_detail">
+                        <div class="col-8  col-lg-9 product__main_detail">
                             <a href="#">PowerShot Elph 115 16MP Digital Camera</a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>
                         </div>
-                        <div class="col-4 col-lg-3 product__main_img">
+                        <div class="col-4  col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-02.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-8 col-lg-9 product__main_detail">
+                        <div class="col-8  col-lg-9 product__main_detail">
                             <a href="#">PowerShot Elph 115 16MP Digital Camera </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>
                         </div>
-                        <div class="col-4 col-lg-3 product__main_img">
+                        <div class="col-4  col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-03.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-12  col-lg-4 featured__product">
+                <div class="col-12 col-md-6 col-lg-4 featured__product">
                     <div class=" featured__product_heading">
                         <h2>On-Sale Products</h2>
                     </div>
@@ -1098,7 +1098,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12  col-lg-4 featured__product">
+                <div class="col-12 col-md-12 col-lg-4 featured__product">
                     <div class=" featured__product_heading">
                         <h2>Top Rated Products</h2>
                     </div>
@@ -1169,7 +1169,7 @@
     <section id="footer">
         <div class="container">
             <div class="row footer__wrapper">
-                <div class="col-12 col-lg-5 footer__logo_main">
+                <div class="col-12 col-md-12 col-lg-5 footer__logo_main">
                     <div class="footer__logo">
                         <img src="images/logo1.png" alt="img" class="img-fluid logo__img">
                     </div>
@@ -1186,7 +1186,7 @@
                         <a href="#"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 footer__find">
+                <div class="col-12 col-md-4 col-lg-3 footer__find">
                     <h2>find it fast</h2>
                     <ul>
                         <li><a href="#">laptops & computers</a></li>
@@ -1199,7 +1199,7 @@
                         <li><a href="#">Accesories</a></li>
                     </ul>
                 </div>
-                <div class="col-12 col-lg-2 footer__find">
+                <div class="col-12 col-md-4 col-lg-2 footer__find">
                     <h2>Information</h2>
                     <ul>
                         <li><a href="#">Find a Store</a></li>
@@ -1212,7 +1212,7 @@
                         <li><a href="#">Careers</a></li>
                     </ul>
                 </div>
-                <div class="col-12 col-lg-2 footer__find">
+                <div class="col-12 col-md-4 col-lg-2 footer__find">
                     <h2>find it fast</h2>
                     <ul>
                         <li><a href="#">My Account</a></li>
