responsive in progress

--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-2  logo">
-                    <img class="img-fluid logo__img" src="images/logo1.png" alt="img">
+                    <a href="./index.html">
+                        <img class="img-fluid logo__img" src="images/logo1.png" alt="img">
+                    </a>                    
                 </div>
                 <div class="col-12 col-sm-12 col-lg-7 search">
                     <div class="header__search_wrapper">
@@ -1171,7 +1173,9 @@
             <div class="row footer__wrapper">
                 <div class="col-12 col-md-12 col-lg-5 footer__logo_main">
                     <div class="footer__logo">
-                        <img src="images/logo1.png" alt="img" class="img-fluid logo__img">
+                        <a href="./index.html">
+                            <img class="img-fluid logo__img" src="images/logo1.png" alt="img">
+                        </a>
                     </div>
                     <h2>Feel free to contact us via phone,email or just send us mail.</h2>
                     <h3>17 Princess Road, London, Greater London NW1 8JR, UK 1-888-8MEDIA (1-888-892-9953) </h3>
