--- a/pages/about.html
+++ b/pages/about.html
@@ -18,6 +18,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- --------main css---------------- -->
     <link rel="stylesheet" href="../css/style.css">
+    <!-- --------------responsive css--------------------- -->
+    <link rel="stylesheet" href="../css/responsive.css">
 </head>
 <body>
     
@@ -107,16 +109,17 @@
     <!-- ------------------nav end here------------------ -->
 
 
-
     <!-- --------------------header start here----------------- -->
 
     <header id="header">
         <div class="container">
             <div class="row">
                 <div class="col-lg-2  logo">
-                    <img class="img-fluid logo__img" src="images/logo1.png" alt="img">
+                    <a href="../index.html">
+                        <img class="img-fluid logo__img" src="images/logo1.png" alt="img">
+                    </a>
                 </div>
-                <div class="col-lg-7 search">
+                <div class="col-12 col-lg-7 search">
                     <div class="header__search_wrapper">
                         <div class="header__info">
                             <a href="tel:"><span><i class="fa-solid fa-phone"></i></span> +8801996153133</a>
@@ -143,11 +146,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-1 list">
+                <div class="col-6 col-lg-1 list">
                     <a href="#"><span><i class="fa-solid fa-heart"></i></span> wishlist (24)</a>
                     <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
                 </div>
-                <div class="col-lg-2 cart">
+                <div class="col-6 col-lg-2 cart">
                     <div class="cart__icon">
                         <i class="fa-solid fa-cart-flatbed"></i>
                         <div class="popup">3</div>
@@ -164,6 +167,8 @@
     </header>
 
     <!-- --------------------header end here----------------- -->
+
+
 
     <!-- ---------------------shop-by start here---------------------- -->
 
@@ -205,7 +210,7 @@
     <section id="about-us">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 about__detail">
+                <div class="col-12 col-sm-8 col-lg-8 about__detail">
                     <h4>Who we are</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis diam erat. Duis velit lectus, posuere a blandit sit amet, tempor at lorem. Donec ultricies, lorem sed ultrices interdum. Leo metus luctus sem, vel vulputate diam ipsum sed lorem. Donec tempor arcu nisl, et molestie massa scelerisque ut. Nunc at rutrum leo. Mauris metus mauris, tristique quis sapien eu, rutrum vulputate enim. <br> <br>
@@ -213,7 +218,7 @@
                         Mauris tempus erat laoreet turpis lobortis, eu tincidunt erat fermentum. Aliquam non tincidunt urna. Integer tincidunt nec nisl vitae ullamcorper. Proin sed ultrices erat. Praesent varius ultrices massa at faucibus. Aenean dignissim, orci sed faucibus pharetra, dui mi dignissim tortor, sit amet condimentum mi ligula sit amet augue.
                     </p>
                 </div>
-                <div class="col-lg-4 about__img">
+                <div class="col-12 col-sm-4 col-lg-4 about__img">
                     <img src="images/about-1.jpg" alt="img" class="img-fluid">
                     <h2>
                         John Snow <span>CEO/Founder</span> 
@@ -221,12 +226,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 about__detail">
+                <div class="col-12 col-sm-8 col-lg-8 about__detail">
                     <h4>Our Goal and Idea</h4>
                     <p>
                         Donec libero dolor, tincidunt id laoreet vitae, ullamcorper eu tortor. Maecenas pellentesque, dui vitae iaculis mattis, tortor nisi faucibus magna, vitae ultrices lacus purus vitae metus. Ut nec odio facilisis, ultricies nunc eget, fringilla orci. Nulla lobortis sem dapibus, aliquet turpis eu, ornare neque. Sed nec sem diam. Mauris neque purus, malesuada at velit vel, tempus congue nisl. Ut aliquam semper augue hendrerit varius. Fusce pretium tempus volutpat. Vivamus dignissim posuere aliquet. In hac habitasse platea dictumst.
                 </div>
-                <div class="col-lg-4 about__img">
+                <div class="col-12 col-sm-4 col-lg-4 about__img">
                     <img src="images/about-2.jpg" alt="img" class="img-fluid">
                     <h2>
                         Smith John  <span>Support Staff</span> 
@@ -244,13 +249,13 @@
     <section id="we-do">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 we-do__detail">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 we-do__detail">
                     <h4>What can we do for you ?</h4>
                     <p>
                         Donec libero dolor, tincidunt id laoreet vitae, ullamcorper eu tortor. Maecenas pellentesque, dui vitae iaculis mattis, tortor nisi faucibus magna, vitae ultrices lacus purus vitae metus.
                     </p>
                 </div>
-                <div class="col-lg-3 we-do__content">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 we-do__content">
                     <div class="content__service">
                         <h4>Fast Delivery</h4>
                         <p>
@@ -261,7 +266,7 @@
                         <i class="fa-solid fa-truck"></i>
                     </div>
                 </div>
-                <div class="col-lg-3 we-do__content">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 we-do__content">
                     <div class="content__service">
                         <h4>Support 24/7</h4>
                         <p>
@@ -272,7 +277,7 @@
                         <i class="fa-solid fa-futbol"></i>
                     </div>
                 </div>
-                <div class="col-lg-3 we-do__content">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 we-do__content">
                     <div class="content__service">
                         <h4>Best Quality</h4>
                         <p>
@@ -294,33 +299,33 @@
 
     <section id="brand_icon">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-2 brand__img">
+            <div class="row brand__row">
+                <div class="col-6 col-md-4 col-lg-2 brand__img">
                     <a href="#">
                         <img src="images/brand-01.jpg" alt="img" class="img-fluid">
                     </a>                    
                 </div>
-                <div class="col-lg-2 brand__img">
+                <div class="col-6 col-md-4 col-lg-2 brand__img">
                     <a href="#">
                         <img src="images/brand-02.jpg" alt="img" class="img-fluid">
                     </a>                    
                 </div>
-                <div class="col-lg-2 brand__img">
+                <div class="col-6 col-md-4 col-lg-2 brand__img">
                     <a href="#">
                         <img src="images/brand-03.jpg" alt="img" class="img-fluid">
                     </a>                    
                 </div>
-                <div class="col-lg-2 brand__img">
+                <div class="col-6 col-md-4 col-lg-2 brand__img">
                     <a href="#">
                         <img src="images/brand-04.jpg" alt="img" class="img-fluid">
                     </a>                    
                 </div>
-                <div class="col-lg-2 brand__img">
+                <div class="col-6 col-md-4 col-lg-2 brand__img">
                     <a href="#">
                         <img src="images/brand-02.jpg" alt="img" class="img-fluid">
                     </a>                    
                 </div>
-                <div class="col-lg-2 brand__img">
+                <div class="col-6 col-md-4 col-lg-2 brand__img">
                     <a href="#">
                         <img src="images/brand-03.jpg" alt="img" class="img-fluid">
                     </a>                    
@@ -338,141 +343,141 @@
     <section id="featured">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 featured__product">
+                <div class="col-12 col-md-6 col-lg-4 featured__product">
                     <div class=" featured__product_heading">
                         <h2>Featured products</h2>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">Netbook Acer Travel B113-E-10072. </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-01.jpg" alt="img" class="img-fluid">
                             </a>                            
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">PowerShot Elph 115 16MP Digital Camera</a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-02.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">PowerShot Elph 115 16MP Digital Camera </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-03.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 featured__product">
+                <div class="col-12 col-md-6 col-lg-4 featured__product">
                     <div class=" featured__product_heading">
                         <h2>On-Sale Products</h2>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">HP Scanner 2910P </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-04.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">Galaxy Tab 3 GT-P5210 16GB, Wi-Fi, 10.1in - White</a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-05.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">PowerShot Elph 115 16MP Digital Camera </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-06.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 featured__product">
+                <div class="col-12 col-md-12 col-lg-4 featured__product">
                     <div class=" featured__product_heading">
                         <h2>Top Rated Products</h2>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">Galaxy Tab GT-P5210, 10" 16GB Wi-Fi </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-07.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">PowerShot Elph 115 16MP Digital Camera</a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-08.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">Surface RT 64GB, Wi-Fi, 10.6in - Dark Titanium </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-09.jpg" alt="img" class="img-fluid">
                             </a>
@@ -483,8 +488,9 @@
         </div>
     </section>
 
-
     <!-- -------------------------Featured products end here--------------- -->
+
+
 
     <!-- ------------------------footer start here---------------------- -->
 
@@ -493,7 +499,9 @@
             <div class="row footer__wrapper">
                 <div class="col-lg-5 footer__logo_main">
                     <div class="footer__logo">
-                        <img src="images/logo1.png" alt="img" class="img-fluid logo__img">
+                        <a href="../index.html">
+                            <img class="img-fluid logo__img" src="images/logo1.png" alt="img">
+                        </a>
                     </div>
                     <h2>Feel free to contact us via phone,email or just send us mail.</h2>
                     <h3>17 Princess Road, London, Greater London NW1 8JR, UK 1-888-8MEDIA (1-888-892-9953) </h3>
@@ -557,8 +565,11 @@
 
     <!-- ------------------------footer end here---------------------- -->
 
-    <!-- ------------------------coppy start here----------------- -->
 
+
+
+
+    <!-- ------------------------coppy start here----------------- -->
     <section id="coppy">
         <div class="container">
             <div class="coppy__wrapper">
@@ -576,10 +587,6 @@
             </div>
         </div>
     </section>
-
-
-
-
     <!-- ------------------------coppy start here----------------- -->
 
 
