--- a/pages/blog.html
+++ b/pages/blog.html
@@ -18,6 +18,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- --------main css---------------- -->
     <link rel="stylesheet" href="../css/style.css">
+    <!-- --------------responsive css--------------------- -->
+    <link rel="stylesheet" href="../css/responsive.css">
 </head>
 <body>
     
@@ -114,9 +116,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-2  logo">
-                    <img class="img-fluid logo__img" src="images/logo1.png" alt="img">
+                    <a href="../index.html">
+                        <img class="img-fluid logo__img" src="images/logo1.png" alt="img">
+                    </a>
                 </div>
-                <div class="col-lg-7 search">
+                <div class="col-12 col-lg-7 search">
                     <div class="header__search_wrapper">
                         <div class="header__info">
                             <a href="tel:"><span><i class="fa-solid fa-phone"></i></span> +8801996153133</a>
@@ -143,11 +147,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-1 list">
+                <div class="col-6 col-lg-1 list">
                     <a href="#"><span><i class="fa-solid fa-heart"></i></span> wishlist (24)</a>
                     <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
                 </div>
-                <div class="col-lg-2 cart">
+                <div class="col-6 col-lg-2 cart">
                     <div class="cart__icon">
                         <i class="fa-solid fa-cart-flatbed"></i>
                         <div class="popup">3</div>
@@ -192,7 +196,7 @@
                     <a href="#">home</a>
                 </div>
                 <div class="shop-by__about">
-                    <a href="#">blog</a>
+                    <a href="#">about us</a>
                 </div>
             </div>
         </div>
@@ -207,7 +211,7 @@
         <div class="container">
             <div class="row">
                 <!-- ------------blog big banner-------- -->
-                <div class="col-lg-9 blog__main">
+                <div class="col-12 col-lg-9 blog__main"> 
                     <div class="blog__img">
                         <div class="slick__slider">
                             <div class="slider__content_1">                                
@@ -374,7 +378,7 @@
                 </div>
                 <!-- ------------blog big banner-------- -->
                 <!-- ------------blog small content-------- -->
-                <div class="col-lg-3 blog__side">
+                <div class="col-12 col-lg-3 blog__side">
                     <div class="small__search">
                         <input type="text" placeholder="enter keyword" class="common__input">
                         <button class="search__btn">
@@ -444,12 +448,12 @@
                         <ul>
                             <li>
                                 <div class="row">
-                                    <div class="col-lg-5 post__img">
+                                    <div class="col-3 col-md-4  col-lg-5 post__img">
                                         <a href="#">
                                             <img src="images/post-1.jpg" class="img-fluid" alt="img">
                                         </a>
                                     </div>
-                                    <div class="col-lg-7 post__detail">
+                                    <div class="col-9 col-md-8  col-lg-7 post__detail">
                                         <a href="#">Coffee Time in Office </a>
                                         <p>July 12 2014</p>
                                     </div>
@@ -457,12 +461,12 @@
                             </li>
                             <li>
                                 <div class="row">
-                                    <div class="col-lg-5 post__img">
+                                    <div class="col-3 col-md-4 col-lg-5 post__img">
                                         <a href="#">
                                             <img src="images/post-1.jpg" class="img-fluid" alt="img">
                                         </a>
                                     </div>
-                                    <div class="col-lg-7 post__detail">
+                                    <div class="col-9 col-md-8 col-lg-7 post__detail">
                                         <a href="#">Coffee Time in Office </a>
                                         <p>July 12 2014</p>
                                     </div>
@@ -470,12 +474,12 @@
                             </li>
                             <li>
                                 <div class="row">
-                                    <div class="col-lg-5 post__img">
+                                    <div class="col-3 col-md-4 col-lg-5 post__img">
                                         <a href="#">
                                             <img src="images/post-1.jpg" class="img-fluid" alt="img">
                                         </a>
                                     </div>
-                                    <div class="col-lg-7 post__detail">
+                                    <div class="col-9 col-md-8 col-lg-7 post__detail">
                                         <a href="#">Coffee Time in Office </a>
                                         <p>July 12 2014</p>
                                     </div>
@@ -483,12 +487,12 @@
                             </li>
                             <li>
                                 <div class="row">
-                                    <div class="col-lg-5 post__img">
+                                    <div class="col-3 col-md-4 col-lg-5 post__img">
                                         <a href="#">
                                             <img src="images/post-1.jpg" class="img-fluid" alt="img">
                                         </a>
                                     </div>
-                                    <div class="col-lg-7 post__detail">
+                                    <div class="col-9 col-md-8 col-lg-7 post__detail">
                                         <a href="#">Coffee Time in Office </a>
                                         <p>July 12 2014</p>
                                     </div>
@@ -496,12 +500,12 @@
                             </li>
                             <li>
                                 <div class="row">
-                                    <div class="col-lg-5 post__img">
+                                    <div class="col-3 col-md-4 col-lg-5 post__img">
                                         <a href="#">
                                             <img src="images/post-1.jpg" class="img-fluid" alt="img">
                                         </a>
                                     </div>
-                                    <div class="col-lg-7 post__detail">
+                                    <div class="col-9 col-md-8 col-lg-7 post__detail">
                                         <a href="#">Coffee Time in Office </a>
                                         <p>July 12 2014</p>
                                     </div>
@@ -547,23 +551,7 @@
     </section>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
-
-
+    <!-- ----------------------blog end here-------------------------- -->
 
 
 
@@ -574,141 +562,141 @@
     <section id="featured">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 featured__product">
+                <div class="col-12 col-md-6 col-lg-4 featured__product">
                     <div class=" featured__product_heading">
                         <h2>Featured products</h2>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">Netbook Acer Travel B113-E-10072. </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-01.jpg" alt="img" class="img-fluid">
                             </a>                            
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">PowerShot Elph 115 16MP Digital Camera</a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-02.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">PowerShot Elph 115 16MP Digital Camera </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-03.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 featured__product">
+                <div class="col-12 col-md-6 col-lg-4 featured__product">
                     <div class=" featured__product_heading">
                         <h2>On-Sale Products</h2>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">HP Scanner 2910P </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-04.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">Galaxy Tab 3 GT-P5210 16GB, Wi-Fi, 10.1in - White</a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-05.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">PowerShot Elph 115 16MP Digital Camera </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-06.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 featured__product">
+                <div class="col-12 col-md-12 col-lg-4 featured__product">
                     <div class=" featured__product_heading">
                         <h2>Top Rated Products</h2>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">Galaxy Tab GT-P5210, 10" 16GB Wi-Fi </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-07.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">PowerShot Elph 115 16MP Digital Camera</a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-08.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">Surface RT 64GB, Wi-Fi, 10.6in - Dark Titanium </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-09.jpg" alt="img" class="img-fluid">
                             </a>
@@ -719,7 +707,6 @@
         </div>
     </section>
 
-
     <!-- -------------------------Featured products end here--------------- -->
 
     <!-- ------------------------footer start here---------------------- -->
@@ -729,7 +716,9 @@
             <div class="row footer__wrapper">
                 <div class="col-lg-5 footer__logo_main">
                     <div class="footer__logo">
-                        <img src="images/logo1.png" alt="img" class="img-fluid logo__img">
+                        <a href="../index.html">
+                            <img class="img-fluid logo__img" src="images/logo1.png" alt="img">
+                        </a>
                     </div>
                     <h2>Feel free to contact us via phone,email or just send us mail.</h2>
                     <h3>17 Princess Road, London, Greater London NW1 8JR, UK 1-888-8MEDIA (1-888-892-9953) </h3>
@@ -794,7 +783,6 @@
     <!-- ------------------------footer end here---------------------- -->
 
     <!-- ------------------------coppy start here----------------- -->
-
     <section id="coppy">
         <div class="container">
             <div class="coppy__wrapper">
@@ -812,11 +800,6 @@
             </div>
         </div>
     </section>
-
-
-
-
-
     <!-- ------------------------coppy start here----------------- -->
 
 
