--- a/pages/index.html
+++ b/pages/index.html
@@ -18,6 +18,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- --------main css---------------- -->
     <link rel="stylesheet" href="../css/style.css">
+    <!-- --------------responsive css--------------------- -->
+    <link rel="stylesheet" href="../css/responsive.css">
 </head>
 <body>
     
@@ -114,9 +116,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-2  logo">
-                    <img class="img-fluid logo__img" src="images/logo1.png" alt="img">
+                    <a href="../index.html">
+                        <img class="img-fluid logo__img" src="images/logo1.png" alt="img">
+                    </a>
                 </div>
-                <div class="col-lg-7 search">
+                <div class="col-12 col-lg-7 search">
                     <div class="header__search_wrapper">
                         <div class="header__info">
                             <a href="tel:"><span><i class="fa-solid fa-phone"></i></span> +8801996153133</a>
@@ -143,11 +147,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-1 list">
+                <div class="col-6 col-lg-1 list">
                     <a href="#"><span><i class="fa-solid fa-heart"></i></span> wishlist (24)</a>
                     <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
                 </div>
-                <div class="col-lg-2 cart">
+                <div class="col-6 col-lg-2 cart">
                     <div class="cart__icon">
                         <i class="fa-solid fa-cart-flatbed"></i>
                         <div class="popup">3</div>
@@ -171,7 +175,7 @@
         <div class="container">
             <!-- --------banner menu & slider---------- -->
             <div class="row">
-                <div class="col-lg-2 banner__menu">
+                <div class="col-12 col-md-3 col-lg-2 banner__menu">
                     <div class="banner__menu_head">
                         <i class="fa-solid fa-bars-staggered"></i>
                         all departments
@@ -213,7 +217,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-10 banner__content">
+                <div class="col-12 col-md-9 col-lg-10 banner__content">
                     <div class="slick__slider">
                         <div class="slider__content_1">
                             <div class="content__detail">
@@ -240,14 +244,14 @@
             <!-- --------banner menu & slider---------- -->
             <!-- ----------banner mobile & watch------------ -->
             <div class="row">
-                <div class="col-lg-6 mobile">
+                <div class="col-12 col-md-6 col-lg-6 mobile">
                     <a href="#" class="banner__mobile">
                         <h2>new life</h2>
                         <h4>introducing new category</h4>
                         <img src="images/banner-narrow-01.jpg" alt="img">
                     </a>
                 </div>
-                <div class="col-lg-6 mobile">
+                <div class="col-12 col-md-6 col-lg-6 mobile">
                     <a href="#" class="banner__watch">
                         <h2>time & style</h2>
                         <h4>checkout new arrivels</h4>
@@ -270,7 +274,7 @@
                 <!-- ---------1st content-------------- -->
                 <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                     <div class="row">
-                        <div class="col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-01.jpg" alt="img">
                                 <div class="sale__detail">
@@ -296,7 +300,7 @@
                                 </div>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-02.jpg" alt="img">
                                 <div class="sale__detail">
@@ -322,7 +326,7 @@
                                 </div>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-03.jpg" alt="img">
                                 <div class="sale__detail">
@@ -345,7 +349,7 @@
                                 </div>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-04.jpg" alt="img">
                                 <div class="sale__detail">
@@ -380,7 +384,7 @@
                 <!-- ---------2nd content-------------- -->
                 <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
                     <div class="row">                        
-                        <div class="col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-02.jpg" alt="img">
                                 <div class="sale__detail">
@@ -406,7 +410,7 @@
                                 </div>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-01.jpg" alt="img">
                                 <div class="sale__detail">
@@ -432,7 +436,7 @@
                                 </div>
                             </div>                            
                         </div>                        
-                        <div class="col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-04.jpg" alt="img">
                                 <div class="sale__detail">
@@ -461,7 +465,7 @@
                                 </div>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-03.jpg" alt="img">
                                 <div class="sale__detail">
@@ -490,7 +494,7 @@
                 <!-- ---------3rd content-------------- -->
                 <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
                     <div class="row">                        
-                        <div class="col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-03.jpg" alt="img">
                                 <div class="sale__detail">
@@ -513,7 +517,7 @@
                                 </div>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-04.jpg" alt="img">
                                 <div class="sale__detail">
@@ -542,7 +546,7 @@
                                 </div>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-01.jpg" alt="img">
                                 <div class="sale__detail">
@@ -568,7 +572,7 @@
                                 </div>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 sale">
+                        <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-02.jpg" alt="img">
                                 <div class="sale__detail">
@@ -606,29 +610,6 @@
                     </a>
                 </div>
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-            
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -996,141 +977,141 @@
     <section id="featured">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 featured__product">
+                <div class="col-12 col-md-6 col-lg-4 featured__product">
                     <div class=" featured__product_heading">
                         <h2>Featured products</h2>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">Netbook Acer Travel B113-E-10072. </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-01.jpg" alt="img" class="img-fluid">
                             </a>                            
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">PowerShot Elph 115 16MP Digital Camera</a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-02.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">PowerShot Elph 115 16MP Digital Camera </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-03.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 featured__product">
+                <div class="col-12 col-md-6 col-lg-4 featured__product">
                     <div class=" featured__product_heading">
                         <h2>On-Sale Products</h2>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">HP Scanner 2910P </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-04.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">Galaxy Tab 3 GT-P5210 16GB, Wi-Fi, 10.1in - White</a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-05.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">PowerShot Elph 115 16MP Digital Camera </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-06.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 featured__product">
+                <div class="col-12 col-md-12 col-lg-4 featured__product">
                     <div class=" featured__product_heading">
                         <h2>Top Rated Products</h2>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">Galaxy Tab GT-P5210, 10" 16GB Wi-Fi </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-07.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">PowerShot Elph 115 16MP Digital Camera</a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-08.jpg" alt="img" class="img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="row  featured__product_main">
-                        <div class="col-lg-9 product__main_detail">
+                        <div class="col-8 col-lg-9 product__main_detail">
                             <a href="#">Surface RT 64GB, Wi-Fi, 10.6in - Dark Titanium </a>
                             <div>
                                 <p>$2000</p>
                                 <h6>$1873</h6>
                             </div>                            
                         </div>
-                        <div class="col-lg-3 product__main_img">
+                        <div class="col-4 col-lg-3 product__main_img">
                             <a href="#">
                                 <img src="images/product-small-09.jpg" alt="img" class="img-fluid">
                             </a>
@@ -1140,7 +1121,6 @@
             </div>
         </div>
     </section>
-
 
     <!-- -------------------------Featured products end here--------------- -->
 
@@ -1163,7 +1143,9 @@
             <div class="row footer__wrapper">
                 <div class="col-lg-5 footer__logo_main">
                     <div class="footer__logo">
-                        <img src="images/logo1.png" alt="img" class="img-fluid logo__img">
+                        <a href="../index.html">
+                            <img class="img-fluid logo__img" src="images/logo1.png" alt="img">
+                        </a>
                     </div>
                     <h2>Feel free to contact us via phone,email or just send us mail.</h2>
                     <h3>17 Princess Road, London, Greater London NW1 8JR, UK 1-888-8MEDIA (1-888-892-9953) </h3>
@@ -1228,7 +1210,6 @@
     <!-- ------------------------footer end here---------------------- -->
 
     <!-- ------------------------coppy start here----------------- -->
-
     <section id="coppy">
         <div class="container">
             <div class="coppy__wrapper">
@@ -1246,11 +1227,6 @@
             </div>
         </div>
     </section>
-
-
-
-
-
     <!-- ------------------------coppy start here----------------- -->
 
 
